Accordion: Remove position:relative to fix popover clipping

--- a/@navikt/core/css/accordion.css
+++ b/@navikt/core/css/accordion.css
@@ -2,10 +2,6 @@
   --__ac-accordion-header-shadow-color: var(--ac-accordion-header-border, var(--a-border-divider));
 }
 
-.navds-accordion__item:focus-within {
-  position: relative;
-}
-
 /*************************
  * Header *
  *************************/
